[gd_scene load_steps=6 format=2]

[ext_resource path="res://characters/enemies/void4.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/void_sprite_frames.tres" type="SpriteFrames" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27.9057, 41.8672 )

[sub_resource type="Animation" id=2]
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 9.83, 4.07, 21.97, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 5, 3, 0 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 75.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 100.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 50.0
color = Color( 0.956863, 0.0156863, 0.0156863, 1 )

[node name="Enemy" type="RigidBody2D"]
position = Vector2( 3.8147e-06, 0 )
collision_layer = 4
collision_mask = 3
mode = 1
script = ExtResource( 1 )
HP = 3750.0
NUM_DROPS = 5
TYPE = "Melee"
amount_to_move = 75.0
where_to_move = 65.0
move_period = 2.0

[node name="CanvasModulate" type="CanvasModulate" parent="."]
modulate = Color( 1, 84.89, 1, 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
animation = "void4"
frame = 3
playing = true

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/take damage" = SubResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
visible = false
emitting = false
amount = 5
one_shot = true
explosiveness = 0.8
process_material = SubResource( 3 )

[node name="Generators" type="Node2D" parent="."]

[node name="Move" type="Tween" parent="."]

[node name="BossMove" type="Tween" parent="."]

[node name="ExitTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true
[connection signal="tween_all_completed" from="Move" to="." method="_on_Move_tween_all_completed"]
[connection signal="timeout" from="ExitTimer" to="." method="_on_ExitTimer_timeout"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
